--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <meta property="og:image" content="https://tungdao.netlify.app/thumbnail.png" />
         <meta property="og:url" content="https://tungdao.netlify.app" />
         <meta property="og:type" content="website" />
-
+        <meta property="og:image:width" content="1200" />
+        <meta property="og:image:height" content="630" />
         <title>Quang Tung Dao, MSc Student</title>
 
     </head>
