--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="Quang Tung Dao - AI/DS/Pharm" />
-        <meta property="og:title" content="Tung Dao | AI for Drug Discovery" />
+        <meta property="og:title" content="Tung Dao | Pharmacist/MSc Student in AI for Health" />
         <meta property="og:description" content="Personal portfolio on AI-driven drug discovery, cheminformatics, and machine learning." />
         <meta property="og:image" content="https://tungdao.netlify.app/thumbnail.png" />
         <meta property="og:url" content="https://tungdao.netlify.app" />
